--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,7 @@
     "name": "First PWA Demo App",
     "short_name": "First PWA Demo",
     "description": "First PWA App after learning done",
-    "start_url": "/index.html",
-    "scope": ".",
+    "start_url": "index.html",
     "background_color": "#ffffff",
     "theme_color": "#086B6B",
     "orientation": "any",
