--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "short_name": "First PWA Demo",
     "description": "First PWA App after learning done",
     "start_url": "index.html",
-    "scope": "."
+    "scope": ".",
     "background_color": "#ffffff",
     "theme_color": "#086B6B",
     "orientation": "any",
