--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "First PWA Demo App",
     "short_name": "First PWA Demo",
     "description": "First PWA App after learning done",
-    "start_url": "index.html",
+    "start_url": "/",
     "scope": ".",
     "background_color": "#ffffff",
     "theme_color": "#086B6B",
